# web-vim

./: .gitignore  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  vite.config.ts
apps/monaco-ts-lsp-demo/: README.md  index.html  package.json  tsconfig.json  vite.config.ts
apps/monaco-ts-lsp-demo/src/: App.tsx
crates/tui-engine/: Cargo.toml
crates/tui-engine/src/: lib.rs
src/: App.tsx  ExtraKeys.tsx  VimUI.tsx  WebGLRenderer.tsx  index.css  line-numbers-plugin.tsx  opfs-util.ts  plugin-manager.ts  prelude.ts  solid-universal-tui.ts  types.ts  vim-engine.ts
src/prelude/: context-menu.tsx  external-fs.tsx  hello.tsx  line-numbers.tsx  ts-lsp-worker.ts  ts-lsp.tsx
src/solid-universal-tui/: index.ts
