[package]
name = "tui-engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
ratatui = { version = "0.28.1", default-features = false }
wasm-bindgen = "=0.2.100"
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
js-sys = "0.3.77"
web-sys = { version = "=0.3.77", features = ["console"] }
console_error_panic_hook = "0.1.7"
